// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`views/macros/cookie-banner-rejected should allow setting a custom cookiePagePath 1`] = `
"
  

  

  

  <div class=\\"govuk-cookie-banner govuk-!-display-none\\" data-nosnippet role=\\"region\\" aria-label=\\"Cookies on appeal a householder planning decision service\\" data-cy=\\"cookie-banner-rejected\\" id=\\"cookie-banner-rejected\\">
    
    

    <div class=\\"govuk-cookie-banner__message govuk-width-container\\"
    >

    <div class=\\"govuk-grid-row\\">
      <div class=\\"govuk-grid-column-two-thirds\\">
        

        <div class=\\"govuk-cookie-banner__content\\">
    <p>You’ve rejected analytics cookies. You can <a class=\\"govuk-link\\" href=\\"/some/path/here\\">change your cookie settings</a> at any time.</p>
  </div>
      </div>
    </div>

      
      <div class=\\"govuk-button-group\\">
        
          
            <button value=\\"hide\\" type=\\"submit\\" name=\\"cookie_banner_rejected\\" class=\\"govuk-button\\" data-module=\\"govuk-button\\" data-cy=\\"cookie-banner-rejected-hide-message\\">
              Hide this message
            </button>
          
        
      </div>
      
    </div>
  
</div>
"
`;

exports[`views/macros/cookie-banner-rejected should allow setting a custom serviceName 1`] = `
"
  

  

  

  <div class=\\"govuk-cookie-banner govuk-!-display-none\\" data-nosnippet role=\\"region\\" aria-label=\\"Cookies on test service name here\\" data-cy=\\"cookie-banner-rejected\\" id=\\"cookie-banner-rejected\\">
    
    

    <div class=\\"govuk-cookie-banner__message govuk-width-container\\"
    >

    <div class=\\"govuk-grid-row\\">
      <div class=\\"govuk-grid-column-two-thirds\\">
        

        <div class=\\"govuk-cookie-banner__content\\">
    <p>You’ve rejected analytics cookies. You can <a class=\\"govuk-link\\" href=\\"/cookies\\">change your cookie settings</a> at any time.</p>
  </div>
      </div>
    </div>

      
      <div class=\\"govuk-button-group\\">
        
          
            <button value=\\"hide\\" type=\\"submit\\" name=\\"cookie_banner_rejected\\" class=\\"govuk-button\\" data-module=\\"govuk-button\\" data-cy=\\"cookie-banner-rejected-hide-message\\">
              Hide this message
            </button>
          
        
      </div>
      
    </div>
  
</div>
"
`;

exports[`views/macros/cookie-banner-rejected should allow setting all custom attributes 1`] = `
"
  

  

  

  <div class=\\"govuk-cookie-banner govuk-!-display-none\\" data-nosnippet role=\\"region\\" aria-label=\\"Cookies on custom service name\\" data-cy=\\"cookie-banner-rejected\\" id=\\"cookie-banner-rejected\\">
    
    

    <div class=\\"govuk-cookie-banner__message govuk-width-container\\"
    >

    <div class=\\"govuk-grid-row\\">
      <div class=\\"govuk-grid-column-two-thirds\\">
        

        <div class=\\"govuk-cookie-banner__content\\">
    <p>You’ve rejected analytics cookies. You can <a class=\\"govuk-link\\" href=\\"/a/b/c\\">change your cookie settings</a> at any time.</p>
  </div>
      </div>
    </div>

      
      <div class=\\"govuk-button-group\\">
        
          
            <button value=\\"hide\\" type=\\"submit\\" name=\\"cookie_banner_rejected\\" class=\\"govuk-button\\" data-module=\\"govuk-button\\" data-cy=\\"cookie-banner-rejected-hide-message\\">
              Hide this message
            </button>
          
        
      </div>
      
    </div>
  
</div>
"
`;

exports[`views/macros/cookie-banner-rejected should have sensible default attributes 1`] = `
"
  

  

  

  <div class=\\"govuk-cookie-banner govuk-!-display-none\\" data-nosnippet role=\\"region\\" aria-label=\\"Cookies on appeal a householder planning decision service\\" data-cy=\\"cookie-banner-rejected\\" id=\\"cookie-banner-rejected\\">
    
    

    <div class=\\"govuk-cookie-banner__message govuk-width-container\\"
    >

    <div class=\\"govuk-grid-row\\">
      <div class=\\"govuk-grid-column-two-thirds\\">
        

        <div class=\\"govuk-cookie-banner__content\\">
    <p>You’ve rejected analytics cookies. You can <a class=\\"govuk-link\\" href=\\"/cookies\\">change your cookie settings</a> at any time.</p>
  </div>
      </div>
    </div>

      
      <div class=\\"govuk-button-group\\">
        
          
            <button value=\\"hide\\" type=\\"submit\\" name=\\"cookie_banner_rejected\\" class=\\"govuk-button\\" data-module=\\"govuk-button\\" data-cy=\\"cookie-banner-rejected-hide-message\\">
              Hide this message
            </button>
          
        
      </div>
      
    </div>
  
</div>
"
`;
